Fix comments dark mode

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -94,6 +94,7 @@ body > main {
 article[card] {
   h2 {
     margin-block-start: var(--s-4);
+    margin-block-end: var(--s-1);
   }
   a {
     text-decoration: none;
@@ -152,7 +153,6 @@ article tag-list {
 }
 
 article excerpt {
-  margin-top: var(--s-2);
   max-inline-size: var(--measure);
 }
 
@@ -196,6 +196,7 @@ article footer {
     color: #000000;
 
     @mixin dark-mode {
+      color-scheme: auto;
       color: #ffffff;
     }
   }
